; ModuleID = '/home/carl/AnghaBench/freebsd/tools/tools/ncpus/extr_biosmptable.c_memread.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/tools/ncpus/extr_biosmptable.c_memread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pfd = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"pread (%zu @ 0x%jx)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i8*, i64)* @memread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @memread(i64 %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  store i64 %0, i64* %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %8 = load i32, i32* @pfd, align 4
  %9 = load i8*, i8** %6, align 8
  %10 = load i64, i64* %7, align 8
  %11 = load i64, i64* %5, align 8
  %12 = call i64 @pread(i32 %8, i8* %9, i64 %10, i64 %11)
  %13 = load i64, i64* %7, align 8
  %14 = icmp ne i64 %12, %13
  br i1 %14, label %15, label %20

15:                                               ; preds = %3
  %16 = load i64, i64* %7, align 8
  %17 = load i64, i64* %5, align 8
  %18 = trunc i64 %17 to i32
  %19 = call i32 @warn(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i64 %16, i32 %18)
  store i32 0, i32* %4, align 4
  br label %21

20:                                               ; preds = %3
  store i32 1, i32* %4, align 4
  br label %21

21:                                               ; preds = %20, %15
  %22 = load i32, i32* %4, align 4
  ret i32 %22
}

declare dso_local i64 @pread(i32, i8*, i64, i64) #1

declare dso_local i32 @warn(i8*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
